--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* @import url(./index.css); */
+/* @import url(./index.css);
 @import url(./components/Bmi/Bmi.css);
 @import url(./components/Classes/Classes.css);
 @import url(./components/Contact/Contact.css);
@@ -8,4 +8,4 @@
 @import url(./components/Info/Info.css);
 @import url(./components/Purchase/Purchase.css);
 @import url(./components/Review/Review.css);
-@import url(./components/Trainers/Trainers.css);
+@import url(./components/Trainers/Trainers.css); */
